--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,31 +8,33 @@
   src: url(../font/Neucha-Regular.ttf);
 }
 
-body {
+/* header */
+
+.background-header {
   background-image: url(../images/background.png);
 }
 
-.h1-title {
-  line-height: 1.2em;
-  font-size: 72px;
-  font-family: 'Neucha-Regular';
-  color: #2A2626;
+.background-header::before {
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 90%;
 }
 
-.h2-title {
-  line-height: 1.2em;
-  font-size: 60px;
-  color: #2A2626;
-}
-
-.h3-title {
-  line-height: 1.2em;
-  font-size: 34px;
-  color: #2A2626;
-}
-
-section {
+.header-section {
   max-width: 1110px;
   margin-top: 100px;
   margin-bottom: 100px;
+  text-align: center;
+}
+
+.header-title {
+  font-size: 72px;
+  font-family: 'Neucha-Regular';
+}
+
+.main-image {
+  height: 525px;
+  top: 55px;
+  right: -270px;
+  position: relative;
 }
