--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,6 +8,11 @@
   src: url(../font/Neucha-Regular.ttf);
 }
 
+body {
+  margin: 0;
+  padding: 0;
+}
+
 h1,
 h2,
 h3,
@@ -19,16 +24,42 @@ h4 {
   line-height: 1.2em;
 }
 
+
+h1 {
+  font-size: 72px;
+  font-weight: 400;
+}
+
+h2 {
+  font-size: 60px;
+  font-weight: 400;
+}
+
+h3 {
+  font-size: 34px;
+  font-weight: 400;
+}
+
 /* header */
 
 .background-header {
-  background-image: url(../images/background.png);
+  position: relative;
 }
 
 .background-header::before {
+  position: absolute;
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 90%;
+  background-image: url("../images/background.png");
+  content: "";
+  width: 100%;
+  height: 100%;
+  opacity: 0.1;
+}
+
+.bg-color-light {
+  background-color: #f5f4f0;
+  background-attachment: fixed;
 }
 
 .header-container {
@@ -66,10 +97,13 @@ h4 {
 .main-header-text {
   column-count: 2;
   column-gap: 30px;
+  line-height: 1.6em;
+  margin: 30px;
+  font-size: 16px;
 }
 
 .paragraph {
-  color: #42413c;
+  color: #2A2626;
 }
 
 .navigate-button {
@@ -87,7 +121,7 @@ h4 {
   width: 148px;
   height: 49px;
   background-color: #fe8a02;
-  font-family: Open-Sans, serif;
+  font-family: 'OpenSans-Regular';
   color: #f5f4f0;
   font-weight: 700;
   font-size: 16px;
