--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,61 +8,46 @@
   src: url(../font/Neucha-Regular.ttf);
 }
 
+/* main options */
+
+*,
+*::before,
+*::after {
+  border: none;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  padding: 0;
+  font: normal normal 400 var(--font-size) / var(--line-height) 'OpenSans-Regular', serif;
+  color: var(--white);
 }
 
-h1,
-h2,
-h3,
-h4 {
-  z-index: 1;
-  margin: 0;
-  color: #fe8a02;
-  font-family: 'Neucha-Regular';
-  line-height: 1.2em;
+:root {
+  --white: #fff;
+  --translucent-light: #d7ccc0;
+  --light: #f5f4f0;
+  --main: #fe8a02;
+  --main-hover: #ea7600;
+  --main-dark: #42413c;
+  --translucent-dark: #908d8b;
+  --brown: #b09a81;
+  --blue: #1085c5;
+  --font-size: 16px;
+  --line-height: 1.6em;
+  --headline-height: 1.2em;
+  --text-dark: #2a2626;
+  --link-color: #007dc1;
 }
 
-
-h1 {
-  font-size: 72px;
-  font-weight: 400;
-}
-
-h2 {
-  font-size: 60px;
-  font-weight: 400;
-}
-
-h3 {
-  font-size: 34px;
-  font-weight: 400;
-}
-
-/* header */
-
-.background-header {
+header,
+section,
+footer,
+nav {
   position: relative;
 }
 
-.background-header::before {
-  position: absolute;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-image: url("../images/background.png");
-  content: "";
-  width: 100%;
-  height: 100%;
-  opacity: 0.1;
-}
-
-.bg-color-light {
-  background-color: #f5f4f0;
-  background-attachment: fixed;
-}
-
-.header-container {
+.container {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -72,58 +57,149 @@ h3 {
   padding: 100px 0;
 }
 
-.header-title {
-  font-size: 72px;
-  font-family: 'Neucha-Regular';
+h1,
+h2,
+h3 {
+  margin: 0;
+  font-weight: 400;
+  line-height: var(--headline-height);
+  font-family: 'Neucha-Regular', serif;
+  color: var(--main);
+  z-index: 1;
 }
 
-.main-image {
-  height: 525px;
+
+h1 {
+  font-size: 72px;
+}
+
+h2 {
+  font-size: 60px;
+
+}
+
+h3 {
+  font-size: 34px;
+
+}
+
+.main-color {
+  color: var(--main);
+}
+
+.text-dark {
+  color: var(--text-dark);
+}
+
+.text-white {
+  color: var(--white);
+}
+
+.text-brown {
+  color: var(--brown);
+}
+
+.bg-light {
+  background-color: var(--light);
+}
+
+.bg-white {
+  background-color: var(--white);
+}
+
+.bg-brown {
+  background-color: var(--brown);
+}
+
+.bg::before {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/background.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  opacity: 0.1;
+  content: "";
+
+}
+
+.flex-container {
+  display: flex;
+  column-gap: 30px;
+}
+
+.flex-column {
+  margin-top: 0;
+  margin-bottom: 0;
+
+  flex: 1;
+}
+
+/* header */
+
+.header-section {
+  position: relative;
+}
+
+.header-img {
+  position: absolute;
   top: 55px;
   right: -270px;
-  position: absolute;
+  height: 525px;
 }
 
-.color-black-title {
-  font-family: 'Neucha-Regular';
-  font-weight: 400;
-  color: #2a2626;
+.padding-top-185 {
+  padding-top: 185px;
 }
 
-.header-text {
-  padding-top: 200px;
-}
-
-.main-header-text {
-  column-count: 2;
-  column-gap: 30px;
-  line-height: 1.6em;
-  margin: 30px;
-  font-size: 16px;
-}
-
-.paragraph {
-  color: #2A2626;
-}
-
-.navigate-button {
-  position: absolute;
+.button-1 {
   display: block;
-  top: 0;
-  right: 0;
-  width: 148px;
-  height: 49px;
+  width: max-content;
+  padding: 12px 24px;
+  margin-top: 40px;
+
+  font-weight: 700;
+  font-size: var(--font-size);
+  line-height: var(--line-height);
+  font-family: 'OpenSans-Regular', serif;
+  color: var(--white);
+  text-transform: uppercase;
+  text-decoration: none;
+
+  background-color: var(--main);
 }
 
-.header-button {
-  position: absolute;
-  margin-top: 40px;
-  width: 148px;
-  height: 49px;
-  background-color: #fe8a02;
-  font-family: 'OpenSans-Regular';
-  color: #f5f4f0;
-  font-weight: 700;
-  font-size: 16px;
-  border: #f5f4f0;
+.button-1:hover {
+  background-color: var(--main-hover);
+}
+
+/* video section */
+
+.video-section {
+  z-index: 2;
+  height: 914px;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.margin-bottom-30 {
+  margin-top: 0;
+  margin-bottom: 30px;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.video {
+  position: relative;
+  margin-top: -100px;
+  bottom: -100px;
+  filter: drop-shadow(0 16px 32px rgba(0 0 0 / 15%));
 }
